--- a/test.html
+++ b/test.html
@@ -4,6 +4,8 @@
     <title></title>
 </head>
 <body>
-    <a href="javascript:">Test Me</a>
+    <a href="javascript:(function(){
+    document.body.appendChild(document.createElement('script')).src = 'https://bitbucket.org/awalkerca/magiccafebookmarklet/raw/b6d052ebfdf56e8f0037dfd6a78b6abd658bb941/bookmarklet.js';
+    }())">Test Me</a>
 </body>
 </html>
