--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>This bookmarklet allows you to pick which sub-forums you want to display and removes all others. 
 It also removes the bold green colour and instead replaces it with a black/grey alternate.</p>
-            <a href="javascript:(function(){var path='http://awalkerca.github.io/MagicCafeBookmarklet/javascripts/';var el=document.createElement('script');el.id='magicCafeBookmarkletScript';el.dataset.path=path;document.body.appendChild(el).src=path+'bookmarklet.cafehelper.js';}())">Cafe Helper</a>
+            <a href="javascript:(function(){var path='https://awalkerca.github.io/MagicCafeBookmarklet/javascripts/';var el=document.createElement('script');el.id='magicCafeBookmarkletScript';el.dataset.path=path;document.body.appendChild(el).src=path+'bookmarklet.cafehelper.js';}())">Cafe Helper</a>
         </article>
       </div>
     </div>
